@@ -2,6 +2,7 @@ set(SRC_FILES
   src/date_and_time.f90
   src/kinds.f90
   src/random_numbers.f90
+  src/solvers.f90
   src/sorting.f90
   )
 
