@@ -3,6 +3,10 @@
   ChangeLog.txt for libSUFR
   
   
+    3: AstroFloyd, 5/10/2010
+      - Converting libAF git repository, 19/07/2010:
+	- added solvers.f90
+      
     2: AstroFloyd, 5/10/2010
       - Converting libAF git repository, 13/07/2010:
         - adding compiler name to lib name and include dir
